[workspace]
members = [
	"node",
	"runtime",
	"frame/timestamp",
	"frame/timestamp/rpc",
	"frame/timestamp/rpc/runtime-api",
	"frame/balances",
	"frame/balances/rpc",
	"frame/balances/rpc/runtime-api",
	"client/consensus/manual-seal",
]
exclude = [
	"contracts",
]

[profile.release]
panic = "unwind"
