[package]
name = "pallet-timestamp"
version = "4.0.0-rev"
license = "Apache-2.0"
homepage = "https://substrate.io"
description = "FRAME Timestamp Module"
documentation = "https://docs.rs/pallet-timestamp"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "23.0.0", default-features = false, optional = true}
sp-storage = { version = "13.0.0", default-features = false}
sp-timestamp = { version = "21.0.0", default-features = false}
frame-support = { version = "23.0.0", default-features = false }
frame-system = { version = "23.0.0", default-features = false }
sp-inherents = { version = "21.0.0", default-features = false }
sp-runtime = { version = "26.0.0", default-features = false }
sp-io = { version = "25.0.0", default-features = false, optional = true }
sp-std = { version = "10.0.0", default-features = false }



docify = "0.2.4"

[dev-dependencies]
sp-core = { version = "21.0.0" }
sp-io = { version = "25.0.0" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io?/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-timestamp/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-io",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
