[package]
name = "pallet-timestamp-rpc"
version = "4.0.0-dev"
authors = ["Astar Network"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "RPC interface for timestamp pallet."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false }
futures = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
#node-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
pallet-timestamp = { path = "../../timestamp", default-features = false }
pallet-timestamp-rpc-runtime-api = { path = "./runtime-api" }
sc-transaction-pool-api = { version = "25.0.0" , default-features = false }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-rpc = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }
contracts-node-runtime = { path = "../../../runtime" }
