[package]
name = "pallet-timestamp-rpc-runtime-api"
version = "4.0.0-dev"
authors = ["Astar Network"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "RPC runtime API for transaction payment FRAME pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
sp-api = { workspace = true }
pallet-timestamp = { default-features = false, path = "../../../timestamp" }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }
frame-support = { workspace = true }
[features]
default = ["std"]
std = [
	"codec/std",
	"pallet-timestamp/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-weights/std",
]
